# blackwell-infer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  README.md  TESTING.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-multiarch.yml  test.yml
client/: stress_test.py
configs/: b200_fp4.json
docker/sglang/: Dockerfile  entrypoint.sh
docker/vllm/: Dockerfile  entrypoint.sh
scripts/: bench_node.sh  cost_calculator.py  download_model.py
tests/: __init__.py  conftest.py  test_download_model.py  test_integration.py  test_stress_client.py
