[project]
name = "blackwell-infer"
version = "0.1.0"
description = "Fast LLM inference on NVIDIA Blackwell (B200)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "aiolimiter>=1.1.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "orjson>=3.10.0",
    "numpy>=1.24.0",
    "huggingface-hub[hf_transfer]>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
