[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackwell-infer"
version = "0.1.0"
description = "Fast LLM inference on NVIDIA Blackwell (B200)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "aiolimiter>=1.1.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "orjson>=3.10.0",
    "numpy>=1.24.0",
    "huggingface-hub[hf_transfer]>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["client*", "scripts*"]
exclude = ["docker*", "configs*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",  # parallel test execution
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx[http2]>=0.27.0",  # for testing
]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "ASYNC", "S"]
ignore = [
    "E501",    # Allow long lines (mostly for display strings and console output)
    "S101",    # Allow assert in tests
    "S311",    # Allow random for non-cryptographic purposes (synthetic data generation)
    "S112",    # Allow try-except-continue (intentional for robust parsing)
    "ASYNC230",# Allow sync open in test files (acceptable for small test files)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["client", "scripts"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
